alignment fix

--- a/styles/resume.module.css
+++ b/styles/resume.module.css
@@ -6,7 +6,7 @@
     display: flex;
     margin-top: 5em;
     flex-wrap: wrap;
-    text-align: center;
+    justify-content: center;
 }
 
 .resumeContainer {
